--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 <title>Главная</title>
 </head>
 <body>
-  
 <div class="header">
       <div class="header-line">
           <div class="header-logo">
@@ -186,6 +185,21 @@
   </p>
   </div>
   <div class="massage-img"><img src="img/massage.png" alt=""></div>
+</div>
+<div class="diplom">
+  <div class="diplom-title">ДИПЛОМЫ</div>
+<div class="diplom-1">
+<img src="img/diplom1" alt="">
+</div>
+<div class="diplom-2">
+  <img src="img/diplom2.png" alt="">
+</div>
+<div class="diplom-3">
+  <img src="img/diplom3.png" alt="">
+</div>
+<div class="diplom-4">
+  <img src="img/diplom4.png" alt="">
+</div>
 </div>
 
 
